--- a/app/src/main/res/layout/activity_home_page_2.xml
+++ b/app/src/main/res/layout/activity_home_page_2.xml
@@ -7,6 +7,12 @@
     tools:context="com.example.jiowhere.HomePageActivity"
     android:background="@drawable/bg3"
     android:orientation="vertical">
+    <include
+        android:id="@+id/mainActivityToolbar"
+        layout="@layout/custom_toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        tools:layout_editor_absoluteY="12dp"></include>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="200dp">
@@ -23,7 +29,7 @@
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="40dp"
                 android:fontFamily="@font/montserrat"
-                android:text="Where do you wanna go today?"
+                android:text="Where do you want to go today?"
                 android:textColor="#42210B"
                 android:textSize="21sp"
                 android:textStyle="bold" />
@@ -134,10 +140,25 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-    <ListView
-        android:id="@+id/listViewTimeLimitedActivities"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true" />
+        android:layout_height="match_parent">
+
+        <ListView
+            android:id="@+id/listViewTimeLimitedActivities"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </android.support.constraint.ConstraintLayout>
+
 
 </LinearLayout>
