--- a/app/src/main/res/layout/activity_recommendation_details.xml
+++ b/app/src/main/res/layout/activity_recommendation_details.xml
@@ -20,56 +20,45 @@
         android:id="@+id/saveButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="4dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/montserrat"
         android:text="Save Activity"
         android:textColor="#42210B"
+        android:textSize="10sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.583"
-        app:layout_constraintStart_toEndOf="@+id/horizontalScrollView"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
-    <HorizontalScrollView
-        android:id="@+id/horizontalScrollView"
-        android:layout_width="232dp"
+
+    <TextView
+        android:id="@+id/activityNameTitle"
+        android:layout_width="284dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/montserrat"
+        android:inputType="textMultiLine"
+        android:scrollHorizontally="false"
+        android:text="Activity Name"
+        android:textColor="#42210B"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@+id/saveButton"
+        app:layout_constraintHorizontal_bias="0.07"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView">
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/activityNameTitle"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fontFamily="@font/montserrat"
-                android:text="Activity Name"
-                android:textColor="#42210B"
-                android:textSize="24sp"
-                android:textStyle="bold"
-                android:inputType="textMultiLine"
-                android:scrollHorizontally="false"/>
-        </LinearLayout>
-    </HorizontalScrollView>
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="450dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView">
+        app:layout_constraintTop_toBottomOf="@+id/activityNameTitle">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -96,7 +85,7 @@
 
                 <TextView
                     android:id="@+id/activityDescriptionTextView"
-                    android:layout_width="266dp"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="4dp"
                     android:layout_marginEnd="8dp"
@@ -126,7 +115,7 @@
                     android:textColor="#42210B"
                     android:textStyle="bold"
                     app:layout_constraintStart_toStartOf="parent"
-                    tools:layout_editor_absoluteY="0dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/mrtNameTextView"
@@ -139,7 +128,7 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.815"
                     app:layout_constraintStart_toEndOf="@+id/textView12"
-                    tools:layout_editor_absoluteY="0dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
 
@@ -156,7 +145,8 @@
                     android:text="@string/address"
                     android:textColor="#42210B"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
                 <TextView
@@ -170,8 +160,7 @@
                     android:textColor="#A642210B"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/textView10"
-                    app:layout_constraintTop_toBottomOf="@+id/mrtNameTextView" />
+                    app:layout_constraintStart_toEndOf="@+id/textView10"/>
 
                 <ImageButton
                     android:id="@+id/copyTextImageButton"
@@ -198,11 +187,13 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="0dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/time_period"
                     android:textColor="#42210B"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/timePeriodTextView"
@@ -215,7 +206,8 @@
                     android:textColor="#A642210B"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
-                    app:layout_constraintStart_toEndOf="@+id/textView15" />
+                    app:layout_constraintStart_toEndOf="@+id/textView15"
+                    app:layout_constraintTop_toTopOf="parent" />
             </android.support.constraint.ConstraintLayout>
 
             <android.support.constraint.ConstraintLayout
@@ -225,14 +217,16 @@
 
                 <TextView
                     android:id="@+id/textviewdura"
-                    android:layout_width="100dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="0dp"
                     android:fontFamily="@font/montserrat"
                     android:text="Opening Hours:"
                     android:textColor="#42210B"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/openingHoursTextView"
@@ -245,7 +239,8 @@
                     android:textColor="#A642210B"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.303"
-                    app:layout_constraintStart_toEndOf="@+id/textviewdura" />
+                    app:layout_constraintStart_toEndOf="@+id/textviewdura"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
@@ -255,21 +250,23 @@
 
                 <TextView
                     android:id="@+id/textView18"
-                    android:layout_width="41dp"
-                    android:layout_height="20dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
+                    android:layout_marginTop="0dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/price"
                     android:textColor="#42210B"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
                     android:id="@+id/priceTextView"
                     android:layout_width="328dp"
                     android:layout_height="20dp"
                     android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
+                    android:layout_marginEnd="0dp"
                     android:fontFamily="@font/montserrat"
                     android:text="Free"
                     android:textColor="#A642210B"
@@ -286,24 +283,26 @@
                 <TextView
                     android:id="@+id/textView20"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="0dp"
                     android:layout_marginStart="16dp"
                     android:fontFamily="@font/montserrat"
                     android:text="@string/tags"
                     android:textColor="#42210B"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <HorizontalScrollView
                     android:id="@+id/horizontalScrollViewTag"
                     android:layout_width="341dp"
                     android:layout_height="20dp"
                     android:layout_marginStart="8dp"
+                    android:layout_marginTop="0dp"
                     android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/textView20">
+                    app:layout_constraintStart_toEndOf="@+id/textView20"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <LinearLayout
                         android:layout_width="match_parent"
@@ -338,7 +337,9 @@
                     android:textColor="#42210B"
                     android:textSize="24sp"
                     android:textStyle="bold"
-                    app:layout_constraintStart_toStartOf="parent" />
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
 
                 <Button
@@ -346,6 +347,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
+                    android:layout_marginTop="8dp"
                     android:background="@drawable/custom_button"
                     android:fontFamily="@font/montserrat"
                     android:text="Leave a Review"
@@ -353,13 +355,14 @@
                     android:textSize="10sp"
                     android:textStyle="bold"
                     app:layout_constraintStart_toEndOf="@+id/textView21"
-                    tools:layout_editor_absoluteY="0dp" />
+                    app:layout_constraintTop_toTopOf="parent" />
 
                 <Button
                     android:id="@+id/deleteReviewButton"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="32dp"
+                    android:layout_marginTop="8dp"
                     android:layout_marginEnd="8dp"
                     android:background="@drawable/custom_button"
                     android:fontFamily="@font/montserrat"
@@ -369,7 +372,8 @@
                     android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="1.0"
-                    app:layout_constraintStart_toEndOf="@+id/leaveReviewButton" />
+                    app:layout_constraintStart_toEndOf="@+id/leaveReviewButton"
+                    app:layout_constraintTop_toTopOf="parent" />
 
             </android.support.constraint.ConstraintLayout>
 
