--- a/app/src/main/res/layout/activity_recommendation_details.xml
+++ b/app/src/main/res/layout/activity_recommendation_details.xml
@@ -23,7 +23,7 @@
         android:layout_marginEnd="8dp"
         android:background="@drawable/custom_button"
         android:fontFamily="@font/montserrat"
-        android:text="Save Activity"
+        android:text="Delete Saved Activity"
         android:textColor="#42210B"
         android:textSize="10sp"
         android:textStyle="bold"
@@ -33,7 +33,7 @@
 
     <TextView
         android:id="@+id/activityNameTitle"
-        android:layout_width="284dp"
+        android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
